[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Spritesheets/Enemies/WallTurret/WallTurret_Idle.png" type="Texture" id=1]
[ext_resource path="res://Assets/Spritesheets/Enemies/WallTurret/WallTurret_Transition.png" type="Texture" id=2]
[ext_resource path="res://Assets/Spritesheets/Enemies/WallTurret/WallTurret_Active.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Enemies/WallTurret/Enemy_WallTurret.gd" type="Script" id=5]
[ext_resource path="res://Assets/Spritesheets/Enemies/WallTurret/turret.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Active",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Transition",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Enemy_WallTurret" type="Node2D"]
script = ExtResource( 5 )

[node name="Structure" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"

[node name="Transition" type="Timer" parent="."]
wait_time = 0.5

[node name="BulletCD" type="Timer" parent="."]
wait_time = 2.0

[node name="RotationCD" type="Timer" parent="."]
wait_time = 0.5

[node name="ExtraBulletCD" type="Timer" parent="."]

[node name="Cannon" type="AnimatedSprite" parent="."]
rotation = -3.14159
scale = Vector2( 3.3, 3.3 )
frames = SubResource( 5 )
playing = true

[connection signal="timeout" from="Transition" to="." method="_on_Transition_timeout"]
[connection signal="timeout" from="BulletCD" to="." method="_on_BulletCD_timeout"]
[connection signal="timeout" from="RotationCD" to="." method="_on_RotationCD_timeout"]
[connection signal="timeout" from="ExtraBulletCD" to="." method="_on_ExtraBulletCD_timeout"]
